# dejavu

./: AGENTS.md  CONTRIBUTING.md  LLM.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml
cli/: CLI_SPECIFICATION.md  README.md  cli-spec.json
cli/python/: README.md  development.md  pyproject.toml
cli/python/src/dejavu_cli/: config.py  state.py
cli/python/src/dejavu_cli/backend/: __init__.py  base.py  platform.py
cli/python/src/dejavu_cli/commands/: config_cmd.py  entities.py  events_cmd.py  init_cmd.py  memory.py
cli/python/tests/: conftest.py  test_agent_mode.py  test_branding.py  test_cli_integration.py  test_commands.py  test_config.py  test_init_internals.py  test_output.py
cookbooks/: customer-support-chatbot.ipynb  dejavu-autogen.ipynb
dejavu/: __init__.py  cli.py  exceptions.py  local_config.py
dejavu-openclaw/: Makefile  README.md  config.ts  filtering.ts  fs-safe.ts  index.test.ts  index.ts  openclaw.plugin.json  package.json  pnpm-lock.yaml  providers.ts  public-artifacts.ts  recall.ts  skill-loader.ts  sqlite-resilience.test.ts  telemetry.ts  tsup.config.ts  types.ts
dejavu-plugin/: .codex-mcp.json  .cursor-mcp.json  .mcp.json  CHANGELOG.md  README.md
docs/: api-reference.mdx  cli.md  docs.json  integrations.mdx  mcp.md  openapi.json  rest-api.md  roadmap.md  vibecoding.mdx
embedchain/: README.md  pyproject.toml
evaluation/: Makefile  README.md  run_experiments.py
openmemory/: README.md  docker-compose.yml  run.sh
server/: .env.example  README.md  alembic.ini  init-db.sh  telemetry.py
skills/: README.md
tests/: test_chatty_llm_parsing.py  test_client.py  test_client_feedback.py  test_dejavu_config.py  test_main.py  test_memory.py  test_memory_integration.py  test_oss_to_platform_migrate.py  test_project.py  test_proxy.py  test_server_auth.py  test_server_params.py  test_telemetry.py  test_telemetry_aliasing.py  test_telemetry_sampling.py
(+516 files in other folders)
