[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dejavu-cli"
version = "0.1.0"
description = "CLI for Deja Vu private AI memory"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Deja Vu", email = "support@dejavu.ai" },
]
keywords = ["dejavu", "memory", "ai", "agents", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "dejavu-memory>=0.1.0",
]

[project.optional-dependencies]
oss = ["dejavu-memory>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
dejavu = "dejavu_cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dejavu_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/dejavu_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default arg — required by Typer's Option/Argument pattern
    "SIM108", # ternary operator — sometimes less readable
]

[tool.ruff.lint.isort]
known-first-party = ["dejavu_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
